--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,17 +29,17 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion '1.4.3'
     }
     packagingOptions {
         resources {
@@ -68,7 +68,6 @@ dependencies {
 
     // Compose Dependency
     implementation 'androidx.navigation:navigation-compose:2.5.3'
-    implementation 'androidx.core:core-splashscreen:1.0.0'
 
     // Coil
     implementation("io.coil-kt:coil-compose:2.2.2")
