--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,9 @@ dependencies {
     // Exoplayer
     implementation "com.google.android.exoplayer:exoplayer:2.18.4"
 
+    // Exoplayer
+    implementation "com.google.android.exoplayer:exoplayer:2.18.4"
+
     // Dagger-Hilt
     implementation 'com.google.dagger:hilt-android:2.45'
     kapt 'com.google.dagger:hilt-compiler:2.45'
