--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-parcelize'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
 }
@@ -69,6 +70,7 @@ dependencies {
 
     // Compose Dependency
     implementation 'androidx.navigation:navigation-compose:2.5.3'
+    implementation "com.google.accompanist:accompanist-pager:0.23.1"
 
     // Coil
     implementation("io.coil-kt:coil-compose:2.2.2")
