--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,15 +71,13 @@ dependencies {
     // Compose Dependency
     implementation 'androidx.navigation:navigation-compose:2.5.3'
     implementation "com.google.accompanist:accompanist-pager:0.23.1"
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.25.1"
 
     // Coil
     implementation("io.coil-kt:coil-compose:2.2.2")
 
     // Exoplayer
-    implementation "com.google.android.exoplayer:exoplayer:2.18.4"
-
-    // Exoplayer
-    implementation "com.google.android.exoplayer:exoplayer:2.18.4"
+    implementation "com.google.android.exoplayer:exoplayer:2.18.5"
 
     // Dagger-Hilt
     implementation 'com.google.dagger:hilt-android:2.45'
