--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-compose:2.5.3'
     implementation "com.google.accompanist:accompanist-pager:0.23.1"
     implementation "com.google.accompanist:accompanist-swiperefresh:0.25.1"
+    implementation "com.google.accompanist:accompanist-permissions:0.24.13-rc"
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation "io.github.dokar3:sheets:0.4.1"
 
     // Coil
     implementation("io.coil-kt:coil-compose:2.2.2")
