--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,8 @@ dependencies {
     implementation 'com.google.accompanist:accompanist-permissions:0.31.0-alpha'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'io.github.dokar3:sheets:0.4.2'
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+    implementation "com.github.skydoves:balloon-compose:1.5.3"
+    implementation("io.github.mr0xf00:easycrop:0.1.1")
 
     // Coil
     implementation('io.coil-kt:coil-compose:2.3.0')
