--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,13 +71,14 @@ dependencies {
 
     // Compose Dependency
     implementation 'androidx.navigation:navigation-compose:2.5.3'
-    implementation "com.google.accompanist:accompanist-pager:0.23.1"
+    implementation "com.google.accompanist:accompanist-pager:0.25.1"
     implementation "com.google.accompanist:accompanist-swiperefresh:0.25.1"
     implementation 'com.google.accompanist:accompanist-permissions:0.31.0-alpha'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'io.github.dokar3:sheets:0.4.2'
     implementation "com.github.skydoves:balloon-compose:1.5.3"
     implementation("io.github.mr0xf00:easycrop:0.1.1")
+    implementation "io.getstream:stream-chat-android-compose:5.17.0"
 
     // Coil
     implementation('io.coil-kt:coil-compose:2.3.0')
